# GameYamlSpiderAndGenerator.api

./: LICENSE  README.md  config.yaml  pyproject.toml
gameyamlspiderandgenerator_api/: sanic_server.py
